infra/k8s-manifests/test-manifest/overlays/dev/test-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-3
  namespace: dev
  labels:
    app: test-3
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-3
  template:
    metadata:
      labels:
        app: test-3
    spec:
      containers:
      - name: test-3
        image: 11111111.dkr.ecr.ap-northeast-2.amazonaws.com/test-dev-ecr:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: test-service-3
  namespace: dev
  labels:
    app: test-3
    env: dev
spec:
  selector:
    app: test-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
